; ModuleID = '/home/carl/AnghaBench/git/extr_commit-graph.c_parse_commit_in_graph.c'
source_filename = "/home/carl/AnghaBench/git/extr_commit-graph.c_parse_commit_in_graph.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.repository = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }
%struct.commit = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @parse_commit_in_graph(%struct.repository* %0, %struct.commit* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.repository*, align 8
  %5 = alloca %struct.commit*, align 8
  store %struct.repository* %0, %struct.repository** %4, align 8
  store %struct.commit* %1, %struct.commit** %5, align 8
  %6 = load %struct.repository*, %struct.repository** %4, align 8
  %7 = call i32 @prepare_commit_graph(%struct.repository* %6)
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %10, label %9

9:                                                ; preds = %2
  store i32 0, i32* %3, align 4
  br label %19

10:                                               ; preds = %2
  %11 = load %struct.repository*, %struct.repository** %4, align 8
  %12 = load %struct.repository*, %struct.repository** %4, align 8
  %13 = getelementptr inbounds %struct.repository, %struct.repository* %12, i32 0, i32 0
  %14 = load %struct.TYPE_2__*, %struct.TYPE_2__** %13, align 8
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = load %struct.commit*, %struct.commit** %5, align 8
  %18 = call i32 @parse_commit_in_graph_one(%struct.repository* %11, i32 %16, %struct.commit* %17)
  store i32 %18, i32* %3, align 4
  br label %19

19:                                               ; preds = %10, %9
  %20 = load i32, i32* %3, align 4
  ret i32 %20
}

declare dso_local i32 @prepare_commit_graph(%struct.repository*) #1

declare dso_local i32 @parse_commit_in_graph_one(%struct.repository*, i32, %struct.commit*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
